# weza-build

./: .env.example  .gitignore  Anchor.toml  LICENSE  NOTICE  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: BRAND.md  COLOSSEUM_SUBMISSION.md  DEMO_WALKTHROUGH.md  DEPLOYMENT.md  FRONTEND_BACKEND_CONTRACT.md  HACKATHON_CANVAS.md  OUTREACH.md  PITCH.md  PITCH_DECK.md  RELEASE_READINESS.md  RISK_REGISTER.md  SMOKE_TEST.md  STORYBOARD.md  SUBMISSION_CHECKLIST.md  TRACTION.md
programs/weza_approval/: Cargo.toml
programs/weza_approval/src/: lib.rs
scripts/: migrate.ts  seed.ts  setup-treasury.ts  sync-vercel-env.mjs
src/app/: globals.css  layout.tsx  loading.tsx  login-form.tsx  page.tsx
src/app/about/: page.tsx
src/app/app/: layout.tsx  page.tsx
src/app/demo/: page.tsx
src/app/signup/: page.tsx  signup-form.tsx
src/components/: action-card.tsx  app-shell.tsx  audit-row.tsx  brand-logo.tsx  comment-thread.tsx  deploy-config-banner.tsx  handoff-pill.tsx  live-audit.tsx  payout-panel.tsx  review-panel.tsx  status-chip.tsx  submit-panel.tsx  treasury-status.tsx  version-history.tsx
src/lib/: api.ts  db.ts  env.ts  format.ts  guard.ts  ids.ts  repo.ts  session.ts  solana-approval.ts  solana.ts  squads.ts  state-machine.ts  storage.ts  supabase-server.ts  supabase-service.ts  types.ts  views.ts
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_storage.sql  0004_onchain_approval.sql
tests/: auth.test.ts  db.test.ts  flow.test.ts  helpers.ts  schema.sql  solana-memo.test.ts  state-machine.test.ts
(+16 files in other folders)
